@@ -2,10 +2,6 @@ TODO --- things that needs to be done with Daisy -*- outline -*-
 
 * TertiaryOld
 
-** kun en "column tertiary"
-
-** Tertiary::tick -> tick_water
-
 ** TertiaryOld macro + mactrans
 
 ** TertiaryOld skal skabes hvis 1D med ler.
