@@ -1,3 +1,7 @@
+2008-05-29  Per Abrahamsen  <abraham@dina.kvl.dk>
+
+	* condition_time.C: Fix timestep for "*ly" models.
+
 2008-05-23  Per Abrahamsen  <abraham@dina.kvl.dk>
 
 	* tertiary_instant.C: New model.
